index.html: Fix right-hand button bar not hidden on small screens

--- a/distributable/index.css
+++ b/distributable/index.css
@@ -326,7 +326,7 @@ body
 
     #html-ui .button-bar.left
     {
-        border-right: none;
+        border: none;
     }
 }
 
